corrections minimes sur les classes du Jeu